bug fixed - values with comma