@@ -113,7 +113,7 @@ public class Cone extends AbstractPointModel implements DLODSuport {
 	}
 
 	private double scaleHeight;
-	
+
 	private Perspective perspective;
 
 	public Perspective getPerspective() {
@@ -191,7 +191,7 @@ public class Cone extends AbstractPointModel implements DLODSuport {
 		} 
 
 		if (height() && scale()){
-	
+
 			double height = coneHeight();
 
 			Bounds bounds = boundModel.getBounds();
@@ -239,6 +239,7 @@ public class Cone extends AbstractPointModel implements DLODSuport {
 	private double angleValue(){
 		double value = 0;
 		String val = null;
+		String angleStr = null;
 		Map<String, String> str = this.node.getKeys();
 		if (str.containsKey("angle")||str.containsKey("Angle")||str.containsKey("ANGLE")){
 			String val1 = str.get("angle");
@@ -251,7 +252,18 @@ public class Cone extends AbstractPointModel implements DLODSuport {
 			}else {
 				val = val3; 
 			}
-			value = Double.valueOf(val);
+			angleStr = val.trim().toLowerCase();
+			angleStr = angleStr.replaceAll(",", ".");
+		}
+		try{
+			if(val==null){
+				return new Double(value);
+			}
+			else{
+				return new Double(angleStr);
+			}
+		} catch (Exception e) {
+			log.info("Unsupportet height: " + angleStr);
 		}
 		return value;
 	}
@@ -275,6 +287,7 @@ public class Cone extends AbstractPointModel implements DLODSuport {
 	private double scaleValue(){
 		double value = 0;
 		String val = null;
+		String scaleStr = null;
 		Map<String, String> str = this.node.getKeys();
 		if (str.containsKey("scale")||str.containsKey("Scale")||str.containsKey("SCALE")){
 			String val1 = str.get("scale");
@@ -287,7 +300,18 @@ public class Cone extends AbstractPointModel implements DLODSuport {
 			}else {
 				val = val3; 
 			}
-			value = Double.valueOf(val);
+			scaleStr = val.trim().toLowerCase();
+			scaleStr = scaleStr.replaceAll(",", ".");
+		}
+		try{
+			if(val==null){
+				return new Double(value);
+			}
+			else{
+				return new Double(scaleStr);
+			}
+		} catch (Exception e) {
+			log.info("Unsupportet height: " + scaleStr);
 		}
 		return value;
 	}
@@ -533,7 +557,7 @@ public class Cone extends AbstractPointModel implements DLODSuport {
 		}
 		return null;
 	}
-	
+
 	/**
 	 * set color for cone
 	 * @param pModel
